[project]
name = "ai-exchange"
version = "0.9.0"
description = "a uniform python SDK for message generation with LLMs"
readme = "README.md"
requires-python = ">=3.8"
author = [{ name = "Block", email = "ai-oss-tools@block.xyz" }]
packages = [{ include = "exchange", from = "src" }]
dependencies = [
    "griffe>=1.1.1",
    "attrs>=24.2.0",
    "jinja2>=3.1.4",
    "tiktoken>=0.7.0",
    "httpx>=0.27.0",
    "setuptools>=73.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_exchange"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "codecov>=2.1.13",
]

[project.entry-points."exchange.provider"]
openai = "ai_exchange.providers.openai:OpenAiProvider"
azure = "ai_exchange.providers.azure:AzureProvider"
databricks = "ai_exchange.providers.databricks:DatabricksProvider"
anthropic = "ai_exchange.providers.anthropic:AnthropicProvider"
bedrock = "ai_exchange.providers.bedrock:BedrockProvider"

[project.entry-points."exchange.moderator"]
passive = "ai_exchange.moderators.passive:PassiveModerator"
truncate = "ai_exchange.moderators.truncate:ContextTruncate"
summarize = "ai_exchange.moderators.summarizer:ContextSummarizer"


[tool.pytest.ini_options]
markers = [
    "integration: marks tests that need to authenticate (deselect with '-m \"not integration\"')",
]
